FIX misalignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -109,6 +109,11 @@
 			width: 45em;
 		}
 
+
+		#header .container {
+			margin-left: -22.5em !important;
+		}
+
 	}
 
 	@media screen and (max-width: 980px) {
@@ -2729,7 +2734,8 @@
 			background: rgba(255, 255, 255, 0.95);
 			bottom: 0;
 			left: 50%;
-			margin-left: -22.5em;
+			/*margin-left: -22.5em;*/
+			margin-left: -17.5em;
 			padding: 2.5em;
 			position: absolute;
 		}
@@ -2842,7 +2848,7 @@
 			}
 
 			#header .container {
-				margin-left: -40%;
+				margin-left: -40% !important;
 				padding: 3em;
 			}
 
